fix: Aligned contact panel and added some fields. BREAKING: removed size minimum of the 'sm' screen size.

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -550,36 +550,12 @@ video {
   bottom: 0px;
 }
 
-.top-16 {
-  top: 4rem;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.right-5 {
-  right: 1.25rem;
-}
-
-.right-52 {
-  right: 13rem;
-}
-
-.left-5 {
-  left: 1.25rem;
-}
-
-.left-52 {
-  left: 13rem;
-}
-
-.left-14 {
-  left: 3.5rem;
-}
-
 .right-14 {
   right: 3.5rem;
+}
+
+.top-16 {
+  top: 4rem;
 }
 
 .z-10 {
@@ -638,12 +614,12 @@ video {
   grid-row-start: 3;
 }
 
-.float-right {
-  float: right;
-}
-
 .m-0 {
   margin: 0px;
+}
+
+.m-3 {
+  margin: 0.75rem;
 }
 
 .mb-3 {
@@ -686,12 +662,16 @@ video {
   margin-top: 3rem;
 }
 
+.mt-28 {
+  margin-top: 7rem;
+}
+
 .mt-3 {
   margin-top: 0.75rem;
 }
 
-.mt-28 {
-  margin-top: 7rem;
+.inline-block {
+  display: inline-block;
 }
 
 .flex {
@@ -710,12 +690,20 @@ video {
   aspect-ratio: 1 / 1;
 }
 
+.h-14 {
+  height: 3.5rem;
+}
+
 .h-16 {
   height: 4rem;
 }
 
 .h-40 {
   height: 10rem;
+}
+
+.h-6 {
+  height: 1.5rem;
 }
 
 .h-7 {
@@ -734,40 +722,12 @@ video {
   height: 100%;
 }
 
-.h-\[\] {
-  height: ;
-}
-
-.h-\[2\] {
-  height: 2;
-}
-
-.h-\[4rem\] {
-  height: 4rem;
-}
-
-.h-\[50rem\] {
-  height: 50rem;
-}
-
-.h-\[40rem\] {
-  height: 40rem;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
-.h-28 {
-  height: 7rem;
-}
-
-.h-14 {
-  height: 3.5rem;
-}
-
 .w-2\/4 {
   width: 50%;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .w-\[35rem\] {
@@ -782,28 +742,9 @@ video {
   width: 100%;
 }
 
-.w-32 {
-  width: 8rem;
-}
-
-.w-\[00\] {
-  width: 00;
-}
-
-.w-\[20\] {
-  width: 20;
-}
-
-.w-\[20rem\] {
-  width: 20rem;
-}
-
-.w-\[25rem\] {
-  width: 25rem;
-}
-
-.w-\[30rem\] {
-  width: 30rem;
+.-translate-y-10 {
+  --tw-translate-y: -2.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .-translate-y-40 {
@@ -811,13 +752,14 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-40 {
-  --tw-translate-x: -10rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .list-disc {
   list-style-type: disc;
+}
+
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 .grid-cols-1 {
@@ -900,7 +842,7 @@ video {
   border-radius: 0.75rem;
 }
 
-.border {
+.border-\[1px\] {
   border-width: 1px;
 }
 
@@ -908,16 +850,8 @@ video {
   border-bottom-width: 1px;
 }
 
-.border-\[\#\] {
-  border-color: #;
-}
-
-.border-\[bg-\\\[\\\#E9272A\\\]\] {
-  border-color: bg-\[\#E9272A\];
-}
-
-.border-\[bg-\#E9272A\] {
-  border-color: bg-#E9272A;
+.border-solid {
+  border-style: solid;
 }
 
 .border-\[\#E9272A\] {
@@ -940,19 +874,14 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
-}
-
-.bg-red-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
 }
 
 .bg-\[url\(\'\/src\/images\/p1\.jpg\'\)\] {
@@ -997,6 +926,10 @@ video {
 
 .pt-3 {
   padding-top: 0.75rem;
+}
+
+.pt-5 {
+  padding-top: 1.25rem;
 }
 
 .text-center {
@@ -1074,11 +1007,6 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.drop-shadow {
-  --tw-drop-shadow: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.06));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1095,9 +1023,28 @@ body {
   background: linear-gradient(180deg, rgba(2,0,36,0) 0%, rgba(255,255,255,1) 100%);
 }
 
+.checked\:bg-\[\#E9272A\]:checked {
+  --tw-bg-opacity: 1;
+  background-color: rgb(233 39 42 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-\[\#bd1c1f\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(189 28 31 / var(--tw-bg-opacity));
+}
+
+.focus\:border-\[6px\]:focus {
+  border-width: 6px;
+}
+
+.focus\:border-red-200:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(254 202 202 / var(--tw-border-opacity));
+}
+
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }
 
 .group:hover .group-hover\:opacity-100 {
@@ -1108,7 +1055,17 @@ body {
   opacity: 0.6;
 }
 
+@media (max-width: 767px) {
+  .sm\:left-14 {
+    left: 3.5rem;
+  }
+}
+
 @media (min-width: 768px) and (max-width: 1135px) {
+  .md\:left-14 {
+    left: 3.5rem;
+  }
+
   .md\:w-2\/4 {
     width: 50%;
   }
@@ -1225,6 +1182,11 @@ body {
     text-align: end;
   }
 
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -1233,10 +1195,5 @@ body {
   .lg\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
-  }
-
-  .lg\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
   }
 }
